2014-05-20  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_process.cc (get_mem_values): Rearrange code slightly to
	avoid resource leakage (CID 59973).
	(format_process_stat): Drop temporary variable wcmd and avoid
	string copy without length check (CID 60050).
	(format_process_status): Ditto (CID 60051).

2014-05-20  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (format_proc_swaps): Use tmp_pathbuf for filename,
	rather than allocating and forgetting to free (CID 59982).

2014-05-20  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_floppy.cc (fhandler_dev_floppy::get_drive_info): Fix floppy
	drive handling broken with 1.7.19.

2014-05-20  Corinna Vinschen  <corinna@vinschen.de>

	* scandir.cc (scandir): Assume namelist is always valid, per POSIX.
	(CID 60021).
	* sec_auth.cc (cygwin_logon_user): Securely erase password copy.
	(lsaprivkeyauth): Avoid trying to dereference data if no key is stored
	in the registry (CID 60122).  Securely erase passwords after usage.

2014-05-19  Corinna Vinschen  <corinna@vinschen.de>

	* pseudo-reloc.cc (__report_error): Raise size of module name buffer to
	PATH_MAX.  Fix length in call to GetModuleFileNameW (CID 59947).

2014-05-19  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (call_gaa): Fix setting pa_ret pointer in case of an error
	from GetAdaptersAddresses (CID 60218).
	(get_ifs): Add missing braces in AF_INET6 case which broke netmask
	computation.  Break out of loop if prefix gets <= 0 (CID 59939).

2014-05-19  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 31.

2014-05-19  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (handle_to_fn): Fix length parameter in call to
	QueryDosDeviceW (CID 59936).

2014-05-19  Corinna Vinschen  <corinna@vinschen.de>

	* pinfo.cc (pinfo_basic::pinfo_basic): Fix size of progname array in
	call to GetModuleFileNameW (CID 59935).

2014-05-19  Corinna Vinschen  <corinna@vinschen.de>
